# VisoraAI

./: .gitignore  README.md  accuracy.py  box_data.py  check_charset.py  download_iam.py  lite_detect.py  note_to_self.txt  ocr_model.py  pic_to_text.py  pyproject.toml  quick_eval.py  text_to_audio.py  visora_ai.py  visora_ai_old.txt
Review/: opencv.py
ocr_train/: build_charset.py  charset.py  crnn.py  dataset.py  decode.py  synth_data.py  text_norm.py  train_crnn_ctc.py
ocr_train/data/debug/: labels.csv
ocr_train/data/train/: labels.csv
ocr_train/data/val/: labels.csv
outputs/: README.md
weights/: charset.json
